# mooose-bcf

./: .gitignore  Makefile  pyproject.toml  sync
.github/workflows/: build_and_test.yaml
data/: 2021-08-22-06-31-22.fit  activity_187550144.gpx  activity_943124896.gpx  sample.fit  sample.gpx
explore/: distances.ipynb
mooose-bcf/: big_query.py  do_it.py  files.py  fit_files.py  gpx_files.py  main.py
mooose-bcf/tests/: event.json  test_do_it.py  test_fit_files.py  test_main.py
terraform/: .terraform.lock.hcl  backend.tf  bigquery.tf  function.tf  provider.tf
visualizations/: manifest.json  myViz.js  myViz.json  myVizSource.js
